--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- Paging Links -->
     <div class="paging">
         <a href="shodan.html">Shodan Dorks</a>
-        <a href="gits.html">GitHub Dorks</a>
+        <a href="github.html">GitHub Dorks</a>
     </div>
 
     <!-- Footer -->
