--- a/shodan.html
+++ b/shodan.html
@@ -30,7 +30,7 @@
     <!-- Paging Links -->
     <div class="paging">
         <a href="index.html">Google Dorks</a>
-        <a href="gits.html">GitHub Dorks</a>
+        <a href="github.html">GitHub Dorks</a>
     </div>
 
     <!-- Footer -->
